<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true">
  
  	<RelativeLayout
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">
 
        <!--  Header Starts-->
        <LinearLayout 
            android:id="@+id/header"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@layout/header_gradient"
		    android:paddingTop="5dip"
		    android:paddingBottom="5dip">
		        <!-- Logo Start-->
		        <ImageView 
		            android:src="@drawable/costco_logo"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dip"
		            android:contentDescription="@string/image_logo"
		            android:textAlignment="center"/>
		        <!-- Logo Ends -->
		</LinearLayout>
        <!--  Header Ends -->
 
        <!-- Footer Start -->
        <LinearLayout
            android:id="@+id/footer"
		    android:layout_width="fill_parent"
		    android:layout_height="90dip"
		    android:background="@layout/footer_repeat"
		    android:layout_alignParentBottom="true"
		    android:orientation="horizontal">
		</LinearLayout>
        <!-- Footer Ends -->
 
        <!-- Login Form -->
        <LinearLayout
	          android:orientation="vertical"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:padding="10dip"
	          android:layout_below="@id/header">
		          
		          <!-- Member ID Label and Field -->
		          <TextView 
		              	android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:textColor="#372c24"
		                android:text="@string/user_memberid"/>
		          <EditText 
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="5dip"
		                android:layout_marginBottom="20dip"
		                android:singleLine="true"
		                android:inputType="text"/>
		          
		          <!-- FirstName Label and Field -->
		          <TextView 
		              	android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:textColor="#372c24"
		                android:text="@string/user_firstname"/>
		          <EditText 
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="5dip"
		                android:layout_marginBottom="20dip"
		                android:singleLine="true"
		                android:inputType="text"/>
		          
		          <!-- LastName Label and Field -->
		          <TextView 
		              	android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:textColor="#372c24"
		                android:text="@string/user_lastname"/>
		          <EditText 
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="5dip"
		                android:layout_marginBottom="20dip"
		                android:singleLine="true"
		                android:inputType="text"/>
		          
		          
		          <!-- Username Label and Field -->
		          <TextView 
		              	android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:textColor="#372c24"
		                android:text="@string/user_username"/>
		          <EditText 
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="5dip"
		                android:layout_marginBottom="20dip"
		                android:singleLine="true"
		                android:inputType="text"/>
		          
		          <!-- Password Label and Field -->
		          <TextView 
		              	android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:textColor="#372c24"
		                android:text="@string/user_password"/>
		          <EditText 
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="5dip"
		                android:singleLine="true"
		                android:inputType="textPassword"/>
		          
		          <!-- Login button -->
		          <Button 
		                android:id="@+id/btnLogin"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="10dip"
		                android:text="@string/button_register"/>
		          
		          <!-- Link to Login Screen -->
		          <TextView 
		                android:id="@+id/link_to_login"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="40dip"
		                android:layout_marginBottom="40dip"
		                android:text="@string/link_register"
		                android:gravity="center"
		                android:textSize="20sp"
		                android:textColor="#025f7c"/>
		 
		</LinearLayout>
        <!-- Login Form Ends -->
  
  </RelativeLayout>
  
</ScrollView>